2009-04-19  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/run.in (COVERAGE_100_PERCENT): Added pokermemchache.py.

	* tests/test-pokermemcache.py.in
	(MemcacheTestCase.test03_checkKeyNoString): Wrote test.

2009-04-18  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/run.in (COVERAGE_100_PERCENT): added currencyclient!

	* tests/test-currencyclient.py.in
	(CurrencyClientTestCase.test07_1_breakNote_oddLeftOver): Wrote test.
	(Run): Test classes were not loaded correctly.
	(ErrorCondtionsCurrencyClientTestCase): Created additional test class.
	(ErrorCondtionsCurrencyClientTestCase.test01_parseResultNote_InvalidResult):
	Wrote test.
	(ErrorCondtionsCurrencyClientTestCase.test02_commit_multiLineResult):
	Wrote test.
	(FakeCurrencyClientTestCase.test10_breakNote_FakeCurrencyFailure):
	Wrote test.
	(ErrorCondtionsCurrencyClientTestCase.test03_checkNote_checkNoteResultIsFalse):
	Wrote test.
	(ErrorCondtionsCurrencyClientTestCase.test04_commit_commitResultIsFalse):
	Wrote test.

	* tests/test-pokerdatabase.py.in
	(PokerDatabaseTestCase.test11_confirmLiteralMethodPassThrough):
	Wrote test, yielding 100% coverage.

2009-04-12  Loic Dachary <loic@dachary.org>

 	* Release 1.7.4

	* pokerclient2d/python-poker2d.desktop: Miniicon is not a valid
	  keywork
	* pokerclient2d/poker2d.6.in, pokernetwork/pokerbot.8.in,
	  pokernetwork/pokerserver.8.in: change comments for nroff files
	* debian/python-poker-prizes.install: do not include .pyc
	* debian/python-poker-network.postinst: use which instead of type
	  do not use absolute path names for binaries
	* debian/poker-web.preinst: do not explicitly include debconf
	  script
	* debian/control, debian/control.unstable: fix dependencies to
	  match current policy
	* debian/compat: compat 4 is obsolete
	* debian/changelog: fix pending debian bugs
	* debian/po/sv.po: Swedish strings for poker-network debconf
	* debian/python-poker-network.init: pv=$(python -c 'import sys;
	  print sys.version[:3]')